<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bgreen"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#55000000"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:text="Hello Patient"
                    android:textColor="@color/lightgreen"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="1dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:contentDescription="Menu"
                    android:cropToPadding="false"
                    android:onClick="showPopupMenu"
                    app:srcCompat="@drawable/menu_three_dots" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="170dp"
                android:text="Welcome to Doctrack"
                android:textColor="@color/lightgreen"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_reminders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="170dp"
                android:text="Today's reminder"
                android:textColor="@color/lightgreen"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView_pendingAppoitment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="170dp"
                android:text="Your Top 5 Pending Appointment(s)"
                android:textColor="@color/lightgreen"
                android:textSize="14sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_pendingAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="210dp" />

            </ScrollView>

            <TextView
                android:id="@+id/textView_medication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="170dp"
                android:text="Your Medication"
                android:textColor="@color/lightgreen"
                android:textSize="14sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_medication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="87dp" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>