<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_alignParentEnd="false"
                        android:layout_alignParentBottom="false"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:id="@+id/updateDate"
                        android:layout_width="110dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Date"

                        android:textAlignment="center"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/time" />

                    <TextView
                        android:id="@+id/updateTime"
                        android:layout_width="110dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Time"
                        android:textAlignment="center"
                        android:textSize="18dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/dateBtn"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/green"
                            android:text="Change \nDate" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/dateErrorText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Please select a date"
                            android:textAlignment="center"
                            android:textColor="@android:color/holo_red_dark"
                            android:visibility="gone" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/timeBtn"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="false"
                            android:layout_centerVertical="false"
                            android:layout_weight="1"
                            android:backgroundTint="@color/green"
                            android:text="Change \nTime" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/timeErrorText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Please select a valid time"
                            android:textColor="@android:color/holo_red_dark"
                            android:visibility="gone" />
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>